argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-cloudflare
    kubernetes.io/ingress.class: traefik
spec:
  tls:
  - hosts:
    - argocd.olszewskib.org
    secretName: argocd-tls
  rules:
  - host: argocd.olszewskib.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
